# AiNeed

./: .dockerignore  .env.example  .env.security.example  .eslintrc.json  .gitattributes  .gitignore  .lintstagedrc.json  .npmrc  .prettierignore  .prettierrc  02 申请场地合同所需要材料.doc  1.md  API-CONSISTENCY-FIX.md  CLAUDE.md  LICENSE  README.md  analyze-errors.cjs  commitlint.config.js  community_errors.txt  cov-full.txt  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  eslint-current2.json  eslint-current3.json  eslint-current6.json  eslint-full.txt  eslint-output.json  eslint-output.txt  eslint-result2.txt  eslint-stdout.txt  fix-ts2307.cjs  fix-unused-vars.js  h -lc ''echo bash works'' 2&1'  index.js  limit-node-memory.bat  mobilesrcservicesapi -Name  node-memory-watchdog.bat  (+46 more)
ml/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  QUICKSTART.md  README.md  pyproject.toml  quick_start.py  requirements.txt  start_ai_service.bat  start_ai_service.sh  start_all_services.py  test_dependencies.py  test_style_service.py
ml/api/: Dockerfile  config.py  main.py
ml/config/: algorithm_deployment_config.py  model_training_config.py  paths.py
ml/dataset_tools/: annotation_tool.py  data_pipeline.py  enhanced_data_pipeline.py  generate_synthetic_data.py  process_kaggle_data.py
ml/inference/: body_analysis_server.py  catvton_server.py  clothing_segmentation.py  inference_service.py  local_models.py  outfit_aesthetic_scorer.py  sasrec_server.py  simple_tryon_server.py  trend_prediction.py
ml/ip_adapter/: ip_adapter.py
ml/scripts/: batch_process.py  build_fashion_embeddings.py  build_index.py  build_rag_index.py  check_api.py  check_index.py  convert_index.py  create_metadata.py  debug_clip.py  download_all_models.py  download_models.py  test_tryon.py  (+16 more)
(+24536 files in other folders)
