[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xuno-ml"
version = "1.0.0"
description = "寻裳 AI 服务 — GLM-5 驱动的个人形象定制"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0,<3.0.0",
    "Pillow>=9.5.0,<12.0.0",
    "opencv-python>=4.8.0,<5.0.0",
    "transformers>=4.30.0,<5.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "fastapi>=0.100.0,<0.116.0",
    "uvicorn>=0.23.0,<1.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "aiofiles>=23.0.0,<25.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "huggingface-hub>=0.17.0,<1.0.0",
    "onnxruntime>=1.16.0,<2.0.0",
    "prometheus-client>=0.18.0,<1.0.0",
    "qdrant-client>=1.7.0,<2.0.0",
    "jieba>=0.42.0,<1.0.0",
    "sentence-transformers>=2.2.0,<3.0.0",
    "FlagEmbedding>=1.2.0,<2.0.0",
    "httpx>=0.25.0,<1.0.0",
    "aiohttp>=3.9.0,<4.0.0",
    "tqdm>=4.66.0,<5.0.0",
    "pydantic-settings>=2.0.0,<3.0.0",
    "psutil>=5.9.0,<7.0.0",
    "redis[hiredis]>=5.0.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
include = ["ml*"]

[tool.pytest.ini_options]
testpaths = ["ml/api/tests"]
asyncio_mode = "auto"
